syntax = "proto3";

package pb;

import "account.proto";

option go_package = "github.com/mdmn07C5/bank/pb";

message GetAccountRequest {
    int64 id = 1;
}

message GetAccountResponse {
    Account account = 1;
}